//
//  Testament.swift
//  swiftbible
//
//  Created on 9/1/24.
//

import Foundation

enum Testament: Codable {
    case old
    case new
    case apocrypha
    case enoch
    case jubilees
    case testaments
    case secondEnoch
    case didache
    case firstClement

    static let oldNames = [
           "Genesis", "Exodus", "Leviticus", "Numbers", "Deuteronomy",
           "Joshua", "Judges", "Ruth", "1 Samuel", "2 Samuel",
           "1 Kings", "2 Kings", "1 Chronicles", "2 Chronicles", "Ezra",
           "Nehemiah", "Esther", "Job", "Psalms", "Proverbs",
           "Ecclesiastes", "Song of Solomon", "Isaiah", "Jeremiah",
           "Lamentations", "Ezekiel", "Daniel", "Hosea", "Joel",
           "Amos", "Obadiah", "Jonah", "Micah", "Nahum",
           "Habakkuk", "Zephaniah", "Haggai", "Zechariah", "Malachi"
       ]

    static let newNames = [
        "Matthew", "Mark", "Luke", "John", "Acts", "Romans",
        "1 Corinthians", "2 Corinthians", "Galatians", "Ephesians", "Philippians",
        "Colossians", "1 Thessalonians", "2 Thessalonians", "1 Timothy",
        "2 Timothy", "Titus", "Philemon", "Hebrews", "James", "1 Peter",
        "2 Peter", "1 John", "2 John", "3 John", "Jude", "Revelation"
    ]

    static let apocryphaNames = [
        "Tobit",
        "Judith",
        "Additions to Esther",
        "Wisdom of Solomon",
        "Ecclesiasticus",
        "Baruch",
        "Letter of Jeremiah",
        "Prayer of Azariah",
        "Susanna",
        "Bel and the Dragon",
        "1 Maccabees",
        "2 Maccabees",
        "1 Esdras",
        "2 Esdras",
        "Prayer of Manasseh",
        "Psalm 151",
        "3 Maccabees",
        "4 Maccabees"
    ]

    static let enochNames = [
        "The Book of the Watchers",
        "The Book of Parables",
        "The Astronomical Book",
        "The Book of Dream Visions",
        "The Epistle of Enoch"
    ]

    static let jubileesNames = [
        "Book of Jubilees"
    ]

    static let testamentsNames = [
        "Testament of Reuben",
        "Testament of Simeon",
        "Testament of Levi",
        "Testament of Judah",
        "Testament of Issachar",
        "Testament of Zebulun",
        "Testament of Dan",
        "Testament of Naphtali",
        "Testament of Gad",
        "Testament of Asher",
        "Testament of Joseph",
        "Testament of Benjamin"
    ]

    static let secondEnochNames = [
        "2 Enoch (Secrets of Enoch)"
    ]

    static let didacheNames = [
        "Didache"
    ]

    static let firstClementNames = [
        "1 Clement"
    ]
}
